v1.0.5

* switched to vanilla bows, there were arrow render problems (i think vanilla hardcoded them..)
* spells now correctly require bows or melee (for arrow spells and melee spells) currently only 1 melee spell
* compatible items should not be able to cast spells

v.1.0.4

Mod now requires library: Library of Exile

Goal of the library is to try to allow some of the features I make to be playable without Age of Exile.
For example, if I wanted to make a dimension, I could make it as a separate mod and then use my library to add Age of Exile support.
And also to house some widely used utilities.

A separate mod has been created to house my controversial balance changes: Balance of Exile.
This currently contains the enviromental damage check and anti mob farm system. 

This is my first time making a library, so I expect some bugs.

* added new gear type, Holy scepter.
* added a new unique scepter
* fixed leveling being too easy because exp was multiplied by total mob health instead of total vanilla hp before the added health
* fixed hp rendering so it's accurate (it didnt show lost hp for a while)
* skill gems now salvagable (dont throw them away now xD)
* should fix spell tooltips having wrong levels
* added config for scale mob lvl to player so you don't need to use datapacks for this common complaint
* reworked gear sockets to be less confusing
* added orb of infinity
* player dmg should now be disabled if pvp is disabled 
* made spell tooltips shorter
* optimized mob type detection

v.1.0.3

Trying out a different damage system. Basically:
- I don't change vanilla damage at all, I just add my damage too.
- This leads to all armor and weapons being compatible, just less and less useful as Age of Exile stats grow over levels.
- I'm still unsure if players who attack with Age of Exile weapons should do both vanilla and exile damage.

With this, my mod should no longer be a compatibility nightmare and requiring itself to be the center of a modpack. 